chore: integration tests v3
