# src/main/java/app/foot/controller/PlayerController.java
@@ -5,6 +5,7 @@ import app.foot.controller.rest.mapper.PlayerRestMapper;
 import app.foot.repository.entity.PlayerEntity;
 import app.foot.service.PlayerService;
 import lombok.AllArgsConstructor;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
@@ -32,17 +33,13 @@ public class PlayerController {
                 .map(mapper::toRest)
                 .collect(Collectors.toUnmodifiableList());
     }
-
-    // TODO: add PUT /players where you can modify the name and the guardian status of a player
-    //  Don't forget to add integration tests for this
-
     @PutMapping("/players/{playerId}")
-    public Player updatePlayer(@PathVariable int playerId,
-                               @RequestParam(required = false) String playerName,
-                               @RequestParam(required = false) Boolean isGuardian){
+    public ResponseEntity<Player> updatePlayer(@PathVariable int playerId,
+                                              @RequestParam(required = false) String playerName,
+                                              @RequestParam(required = false) Boolean isGuardian){
         service.updatePlayerName(playerId,playerName);
         service.updateGuardian(playerId,isGuardian);
-        return mapper.toRest(service.getPlayer(playerId));
+        return service.getPlayer(playerId);
     }
 
 }
